# CMU_Mask-R-CNN_ROS

./: .gitignore  CMakeLists.txt  LICENSE  README.md  mmseg_ros.env  package.xml
cfg/: config.json
src/: main.py  model.py  semantic_cloud.py
